--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.1.6",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
